update: React 全家桶

--- a/source/_posts/2022_07_React-全家桶.md
+++ b/source/_posts/2022_07_React-全家桶.md
@@ -1761,8 +1761,34 @@ fiber 的遍历是深度优先遍历
 
 ![](fiber-foreach.bmp)
 
+![](fiber-effect.bmp)
+
+执行顺序
+
+1. beginWork root
+2. beginWork A1
+3. beginWork B1
+4. beginWork C1
+5. completeUnitOfWork  C1
+6. beginWork C2
+7. completeUnitOfWork C2
+8. completeUnitOfWork B1
+9. beignWork B2
+10. completeUnitOfWork B2
+11. completeUnitOfWork A1
+12. completeUnitOfWork root
+
 ```js
 const container = document.getElementById('root')
+/**
+ * <div id="A1">
+ *  <div id="B1">
+ *    <div id="C1"></div>
+ *    <div id="C2"></div>
+ *  </div>
+ *  <div id="B2"></div>
+ * </div>
+ */
 const element = {
     type: 'div',
     props: {
@@ -1799,7 +1825,7 @@ const element = {
 
 }
 // 下一个工作单元,fiber 也是一个普通的对象
-let nextUnitOfWork = {
+let workingInProgressRoot = {
     stateNode: container, // 对应的DOM节点
     props: { // fiber 的属性
         children: [element]
@@ -1808,12 +1834,27 @@ let nextUnitOfWork = {
     // return 指向父亲
     // sibling 指向弟弟
 }
-
-function workLoop() {
+let nextUnitOfWork = workingInProgressRoot
+function workLoop(deadline) {
     // 如果当前有工作单元就执行，并返回下一个工作单元
-    while (nextUnitOfWork) {
+    while (nextUnitOfWork && deadline.timeRemaining() > 0) {
         nextUnitOfWork = performUnitOfWork(nextUnitOfWork)
     }
+
+    if (!nextUnitOfWork) {
+        commitRoot()
+    }
+}
+
+function commitRoot() {
+    let currentFiber = workingInProgressRoot.firstEffect
+    while (currentFiber) { // c1 c2 b1 b2 a1
+        if (currentFiber.effectTag === 'PLACEMENT') {
+            currentFiber.return.stateNode.appendChild(currentFiber.stateNode)
+        }
+        currentFiber = currentFiber.nextEffect
+    }
+    workingInProgressRoot = null
 }
 /**
  * 1. 创建此 fiber 的真实 DOM，通过虚拟 DOM 创建对应的 fiber 树结构
@@ -1821,14 +1862,87 @@ function workLoop() {
 function performUnitOfWork(workingInProgressFiber) {
     beginWork(workingInProgressFiber)
 
-    if (workingInProgressFiber.children) {
-        return workingInProgressFiber.children
+    // 如果该 fiber 节点有指向的儿子
+    if (workingInProgressFiber.child) {
+        return workingInProgressFiber.child
+    }
+    // 该 fiber 没有儿子，则找它的弟弟
+    while (workingInProgressFiber) {
+        // 没有儿子，当前节点就结束了
+        completeUnitOfWork(workingInProgressFiber)
+        // 如果它有弟弟，则找到弟弟
+        if (workingInProgressFiber.sibling) {
+            return workingInProgressFiber.sibling
+        }
+        // 否则，将 workingInProgressFiber 置为它父亲，找它父亲的弟弟，也就是它叔叔
+        workingInProgressFiber = workingInProgressFiber.return
     }
 }
 
-// 创建真实DOM，创建fiber
-function beginWork() {
+// 创建真实DOM，创建fiber，构建 fiber 树
+function beginWork(workingInProgressFiber) {
+    if (!workingInProgressFiber.stateNode) {
+        workingInProgressFiber.stateNode = document.createElement(workingInProgressFiber.type)
+        for (let key in workingInProgressFiber.props) {
+            if (key !== 'children') {
+                workingInProgressFiber.stateNode[key] = workingInProgressFiber.props[key]
+            }
+        }
+    }
+    // 创建子 fiber
+    let previousFiber
+    if (!Array.isArray(workingInProgressFiber.props.children)) return
+    workingInProgressFiber.props.children.forEach((child, i) => {
+        const childFiber = {
+            type: child.type,
+            props: child.props,
+            return: workingInProgressFiber,
+            effectTag: 'PLACEMENT', // 这个 fiber 对应的节点要被插入到页面中去
+            nextEffect: null // 下一个有副作用的节点
+        }
+        // 它父亲的第一个儿子
+        if (i === 0) {
+            workingInProgressFiber.child = childFiber
+        } else {
+            // 上一个的弟弟当前的 fiber
+            previousFiber.sibling = childFiber
+        }
+        previousFiber = childFiber
+    })
+}
 
+// 构建副作用（需要进行DOM操作，更新，插入，删除等）链
+// 每个节点完成时，把儿子的副作用链 + 此节点合并成一个链，然后给到它父亲
+// 副作用链之间通过 nextEffect 链接，有 firstEffect 和 lastEffect 两个指针，是一个单向列表
+// 跟收班费一样：组员给组长班费，组长加上自己的给班长，班长加上自己的给老师
+function completeUnitOfWork(workingInProgressFiber) {
+    const returnFiber = workingInProgressFiber.return
+
+    if (returnFiber) {
+        if (!returnFiber.firstEffect) {
+            // 让自己的第一个有副作用的子节点赋给父亲的
+            returnFiber.firstEffect = workingInProgressFiber.firstEffect
+        }
+        if (workingInProgressFiber.lastEffect) {
+            if (returnFiber.lastEffect) {
+                // 把自己儿子的链表挂到父亲身上
+                returnFiber.lastEffect.nextEffect = workingInProgressFiber.firstEffect
+            }
+            // 再同步一下最新的指针
+            returnFiber.lastEffect = workingInProgressFiber.lastEffect
+        }
+        // 把自己挂到父亲身上
+        if (workingInProgressFiber.effectTag) {
+            if (returnFiber.lastEffect) {
+                returnFiber.lastEffect.nextEffect = workingInProgressFiber
+            } else {
+                // 如果父亲是空的
+                returnFiber.firstEffect = workingInProgressFiber
+            }
+            // 再同步一下最新的指针
+            returnFiber.lastEffect = workingInProgressFiber
+        }
+    }
 }
 
 requestIdleCallback(workLoop)
