add: 2022前端八股文 & update: tags

--- a/source/_posts/2022_05_面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？.md
+++ b/source/_posts/2022_05_面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？.md
@@ -2,6 +2,10 @@
 title: 面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？
 date: 2022-05-22 14:32:45
 tags:
+  - TypeScript
+category:
+  - 技术
+  - 分享
 ---
 
 **_面试官_**：听说你上次写了一个 TypeScript Lodash 库，但是好像没什么用吧
