add: 2022前端八股文

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -7,3 +7,36 @@ category:
   - 技术
   - 分享
 ---
+
+## HTML
+
+### HTML是什么
+
+[MDN解答-HTML（超文本标记语言）](https://developer.mozilla.org/zh-CN/docs/Web/HTML)
+
+1. HTML 是 `HyperText [ˈhʌɪpətɛkst] Markup Language` 的缩写，即超文本
+2. 它定义了网页内容的含义和结构（CSS样式、JS行为）
+3. 超文本：同一个或不同网页中的链接，每个“超链接”都链接着其他的文档
+4. 标记：可以理解为 HTML 语言中的标签，表示不同的含义，比如文字或图片，浏览器能依据这些标记进行文档（网页）的显示
+
+## CSS
+
+## JS基础
+
+## ES6+
+
+## React
+
+## webpack
+
+## Vue
+
+## TS
+
+## 小程序
+
+## 网络
+
+## node
+
+## 其他
