update: 2022前端八股文

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -14,10 +14,12 @@ category:
 
 [MDN解答-HTML（超文本标记语言）](https://developer.mozilla.org/zh-CN/docs/Web/HTML)
 
-1. HTML 是 `HyperText [ˈhʌɪpətɛkst] Markup Language` 的缩写，即超文本
+1. HTML 是 `HyperText [ˈhʌɪpətɛkst] Markup Language` 的缩写，即超文本，比起将他归类为编程语言，他更适合被作为一个标记语言来看待
 2. 它定义了网页内容的含义和结构（CSS样式、JS行为）
 3. 超文本：同一个或不同网页中的链接，每个“超链接”都链接着其他的文档
 4. 标记：可以理解为 HTML 语言中的标签，表示不同的含义，比如文字或图片，浏览器能依据这些标记进行文档（网页）的显示
+
+注：Markdown是一种轻量级标记语言
 
 ## CSS
 
