update: 2022前端八股文

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -29,13 +29,29 @@ category:
 
 ### HTML5是什么，新增了什么
 
+### DOCTYPE是什么
+
+### meta标签有什么作用
+
+### 如何在html中引入js文件或写入js代码，有什么区别
+
+### 如何在html中引入样式表文件或写入css代码，有什么区别
+
 ## CSS
 
 ### 列举常见的选择器
 
 ### 选择器权重
 
+### 什么是伪元素和伪类
+
 ### 常见布局
+
+### position 有哪几种值，分别有什么作用
+
+### 如何清除浮动
+
+### 什么是盒模型
 
 ### flex 布局是什么，有什么特点
 
