update: 2022前端八股文

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -23,6 +23,9 @@ category:
 
 ### 行内元素和块级元素是什么，分别有哪些，有哪些区别
 
+1. 行内元素不会从新一行开始，块级元素会以新的一行开始
+2. 一个行内元素只占据它对应标签的边框所包含的空间，
+
 ### 什么是语义化
 
 ### 如何做好搜索引擎优化
