--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -23,8 +23,15 @@ category:
 
 ### 行内元素和块级元素是什么，分别有哪些，有哪些区别
 
-1. 行内元素不会从新一行开始，块级元素会以新的一行开始
-2. 一个行内元素只占据它对应标签的边框所包含的空间，
+1. **行内元素不会从新一行开始，块级元素会以新的一行开始**
+2. 一个行内元素只占据它对应标签的边框所包含的空间，块级元素占据其父元素（容器）的整个水平空间，垂直空间等于其内容高度，因此创建了一个“块”
+3. 在HTML4.01中遵循上述定义，在HTML5中，块级元素相当于流内容（Flow Content），行内元素相当于措辞内容（Phrasing Content）
+4. 一般而言：**块级元素可以包含行内元素和其他块级元素，行内元素只能包含行内元素或文本**
+5. **行内元素的 `width，height、padding-top、padding-bottom、margin-top、margin-bottom` 无效，其宽高随着其内容的变化而变化，而块级元素只有高随着内容变化而变化**
+5. **HTML中的行内元素举例：`span、img、input、small、strong、svg、label、button、canvas` 等**
+6. **HTML中的块级元素举例：`div、p、h1、header、aside、footer、article、ul、ol、table、` 等**
+
+注：[MDN-行内元素](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Inline_elements)、[MDN-块级元素](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Block-level_elements)
 
 ### 什么是语义化
 
