--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -23,15 +23,18 @@ category:
 
 ### 行内元素和块级元素是什么，分别有哪些，有哪些区别
 
-1. **行内元素不会从新一行开始，块级元素会以新的一行开始**
+1. **【行内元素】和【行内块级元素】不会从新一行开始，【块级元素】会以新的一行开始**
 2. 一个行内元素只占据它对应标签的边框所包含的空间，块级元素占据其父元素（容器）的整个水平空间，垂直空间等于其内容高度，因此创建了一个“块”
 3. 在HTML4.01中遵循上述定义，在HTML5中，块级元素相当于流内容（Flow Content），行内元素相当于措辞内容（Phrasing Content）
-4. 一般而言：**块级元素可以包含行内元素和其他块级元素，行内元素只能包含行内元素或文本**
-5. **行内元素的 `width，height、padding-top、padding-bottom、margin-top、margin-bottom` 无效，其宽高随着其内容的变化而变化，而块级元素只有高随着内容变化而变化**
-5. **HTML中的行内元素举例：`span、img、input、small、strong、svg、label、button、canvas` 等**
-6. **HTML中的块级元素举例：`div、p、h1、header、aside、footer、article、ul、ol、table、` 等**
+4. 一般而言：**【块级元素】可以包含行内元素和其他块级元素，【行内元素】只能包含行内元素或文本**
+5. **【行内元素】的 `width，height、padding-top、padding-bottom、margin-top、margin-bottom` 无效（水平有效，竖直无效），其宽高随着其内容的变化而变化、【行内块级元素】可以设置行内元素不能设置的属性、【块级元素】只有高随着内容变化而变化**
+6. 可以通过 display 改变元素类型：inline -> 行内元素、block -> 块级元素、inline-block -> 行内块级元素
+7. **HTML中的【行内元素】举例：`span、small、strong、svg、label、canvas` 等**
+8. **HTML中的【块级元素】举例：`div、p、h1、header、aside、footer、article、ul、ol、table` 等**
+9. **HTML中的【行内块级元素】举例：`input、button、textarea、select、img`**
 
 注：[MDN-行内元素](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Inline_elements)、[MDN-块级元素](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Block-level_elements)
+注：行内元素在代码里的空格会导致在页面中出现边距
 
 ### 什么是语义化
 
@@ -46,6 +49,11 @@ category:
 ### 如何在html中引入js文件或写入js代码，有什么区别
 
 ### 如何在html中引入样式表文件或写入css代码，有什么区别
+
+### 什么是被替换元素，有哪些
+
+1. 被替换元素（Replaced Element）是其表示超出 CSS 范围的元素
+2. 举例：`iframe、video、img、embed、input[type="image"]`、部分情况下的：`option、audio、canvas、object、applet`
 
 ## CSS
 
