fix: 行内元素和块级元素是什么，分别有哪些，有哪些区别

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -27,7 +27,7 @@ category:
 2. 一个行内元素只占据它对应标签的边框所包含的空间，块级元素占据其父元素（容器）的整个水平空间，垂直空间等于其内容高度，因此创建了一个“块”
 3. 在HTML4.01中遵循上述定义，在HTML5中，块级元素相当于流内容（Flow Content），行内元素相当于措辞内容（Phrasing Content）
 4. 一般而言：**【块级元素】可以包含行内元素和其他块级元素，【行内元素】只能包含行内元素或文本**
-5. **【行内元素】的 `width，height、padding-top、padding-bottom、margin-top、margin-bottom` 无效（水平有效，竖直无效），其宽高随着其内容的变化而变化、【行内块级元素】可以设置行内元素不能设置的属性、【块级元素】只有高随着内容变化而变化**
+5. **【行内元素】的 `width，height、padding-top、padding-bottom、margin-top、margin-bottom` 无效（水平有效，竖直无效），其宽高随着其内容的变化而变化、【行内块级元素】可以设置行内元素设置后无效的属性、【块级元素】只有高随着内容变化而变化**
 6. 可以通过 display 改变元素类型：inline -> 行内元素、block -> 块级元素、inline-block -> 行内块级元素
 7. **HTML中的【行内元素】举例：`span、small、strong、svg、label、canvas` 等**
 8. **HTML中的【块级元素】举例：`div、p、h1、header、aside、footer、article、ul、ol、table` 等**
