update: 如何做好搜索引擎优化

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -45,6 +45,11 @@ category:
 
 ### 如何做好搜索引擎优化
 
+1. 搜索引擎优化，简称：SEO（Search Engine Optimization）。基本原理是“搜索引擎蜘蛛”或“网络爬虫”在互联网中收集并分析得到有用的信息，然后根据关键词存储到数据库中。让自己网站能够被搜索引擎识别，并提高自己网站的权重的过程就叫SEO
+2. 优化手段：定义网站的标题、关键字、描述；内容与关键字的对应，增加关键字的密度；设置robots.txt；设置网站地图；网站布局（结构）优化，HTML语义化；增加首页有效链接；减少子路径的网页触达路径等
+
+注：[robots.txt说明](https://www.robotstxt.org/robotstxt.html)、[juejin-前端SEO优化](https://juejin.cn/post/6844903824428105735#comment)
+
 ### HTML5是什么，新增了什么
 
 ### DOCTYPE是什么
