update: HTML5是什么，新增了什么

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -52,6 +52,20 @@ category:
 
 ### HTML5是什么，新增了什么
 
+1. HTML5是
+2. 新增了语义化标签
+3. 增强型表单，`input` 标签增加了不同类型，增加了几个表单元素，增加了几个表单属性
+4. 支持音视频 `audio` 和 `video`
+5. 新增绘图标签 `canvas` 和对应API
+6. 增加了 `SVG` 的支持
+7. 增加了地理位置相关的API：`window.navigator.geolocation.getCurrentPosition`
+8. 增加了 `drag`、`drop` 拖放事件
+9. 增加了 `WebWorker`
+10. 增加了 `localStorage` 和 `sessionStorage`
+11. 增加了 `WebSocket`
+
+注：[juejin-CSS3和HTML5新特性一览](https://juejin.cn/post/6844903829679390728)
+
 ### DOCTYPE是什么
 
 ### meta标签有什么作用
