update: HTML5是什么，新增了什么

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -52,7 +52,7 @@ category:
 
 ### HTML5是什么，新增了什么
 
-1. HTML5是
+1. HTML5是 HTML 的最新稳定版本，HTML5 将 HTML 从用于构造一个文档的一个简单标记，到一个完整的应用程序开发平台
 2. 新增了语义化标签
 3. 增强型表单，`input` 标签增加了不同类型，增加了几个表单元素，增加了几个表单属性
 4. 支持音视频 `audio` 和 `video`
@@ -64,7 +64,7 @@ category:
 10. 增加了 `localStorage` 和 `sessionStorage`
 11. 增加了 `WebSocket`
 
-注：[juejin-CSS3和HTML5新特性一览](https://juejin.cn/post/6844903829679390728)
+注：[juejin-CSS3和HTML5新特性一览](https://juejin.cn/post/6844903829679390728)、[MDN-HTML5](https://developer.mozilla.org/zh-CN/docs/Glossary/HTML5)
 
 ### DOCTYPE是什么
 
