--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -68,19 +68,19 @@ category:
 
 ### DOCTYPE是什么
 
-1. 用于告诉浏览器用什么DTD（Document Type Definition）来解析文档，即告诉浏览器用哪个版本的HTML
+1. 用于告诉浏览器的标准通用标记语言解析器用什么DTD（Document Type Definition）来解析文档
 2. `<!DOCTYPE>` 声明必须在HTML文档的第一行
 3. 浏览器分为标准模式和怪异模式，怪异模式的部分样式可能标准模式有区别
 
 注：几种声明如下
 ```html
-<!-- 严格模式 -->
+<!-- 标准模式（严格模式） -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"  "http://www.w3.org/TR/html4/strict.dtd">
 <!-- 过渡模式 -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"  "http://www.w3.org/TR/html4/loose.dtd">
 <!-- 框架模式 -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN"  "http://www.w3.org/TR/html4/frameset.dtd">
-<!-- HTML5 -->
+<!-- HTML5规范的标准模式 -->
 <!DOCTYPE html>
 ```
 注：[zhihu-doctype的作用](https://zhuanlan.zhihu.com/p/32609899)
