update: meta标签有什么作用/如何在html中引入js文件或写入js代码

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -69,8 +69,9 @@ category:
 ### DOCTYPE是什么
 
 1. 用于告诉浏览器的标准通用标记语言解析器用什么DTD（Document Type Definition）来解析文档
-2. `<!DOCTYPE>` 声明必须在HTML文档的第一行
-3. 浏览器分为标准模式和怪异模式，怪异模式的部分样式可能标准模式有区别
+2. 浏览器分为标准（严格）模式（Standards Mode）和怪异（混杂）模式（Quirks Mode），怪异模式的部分样式可能标准模式有区别。即**在怪异模式下，浏览器按照自己的方式渲染页面，在标准模式下，浏览器按照W3C标准来渲染页面**
+3. `<!DOCTYPE>` 声明必须在HTML文档的第一行，没有声明则默认怪异模式
+4. 怪异模式是为了兼容W3C标准出来前的网页，在此之前每个浏览器都有自己的渲染方式
 
 注：几种声明如下
 ```html
@@ -87,7 +88,29 @@ category:
 
 ### meta标签有什么作用
 
-### 如何在html中引入js文件或写入js代码，有什么区别
+1. meta 标签一般写于 head 标签中，head 标签中的内容不会在页面上显示，它的作用是保存页面的一些元数据，而 meta 标签用于表示那些不能由其它 HTML 元相关（meta-related）元素（`<base>、<link>, <script>、<style> 或 <title>`）之一表示的任何元数据信息
+2. meta 标签有五大属性：`name`、`http-equiv`、`charset`、`itemprop` 和 `content`，前四种用于指定 meta 标签的作用，`content` 表示其值，如下表格示例：
+
+| 属性       | 属性值          | content值                                                    | 释义                                         |
+| ---------- | --------------- | ------------------------------------------------------------ | -------------------------------------------- |
+| name       | author          | [你的名字/组织名]                                            | 表示网页的作者                               |
+| name       | description     | [描述]                                                       | 网页的描述                                   |
+| name       | keywords        | [关键词]                                                     | 网页的关键词                                 |
+| name       | viewpoint       | `width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover` | 视口相关的设置，如初始缩放，是否允许缩放等   |
+| name       | robots          | `all`/`none`/`index`/`follow`                                | 对当前页面，爬虫应该遵守的规则               |
+| name       | renderer        | `webkit`                                                     | 双核浏览器的渲染方式                         |
+| http-equiv | X-UA-Compatible | `IE=edge,chrome=1`                                           | meta 标签优先于 http 头，用于给 IE浏览器适配 |
+| http-equiv | content-type    | 同 http 的 ContentType                                       | 同 http 的 ContentType                       |
+| itemprop   | image           | [图片链接]                                                   | 举例：QQ的链接分享展示的图                   |
+
+
+注：[MDN-meta](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/meta)、[juejin-作为前端，你必须要知道的meta标签知识](https://juejin.cn/post/7089271039842058253)
+
+### 如何在html中引入js文件或写入js代码
+
+1. 可以直接在 script 标签中写 js 代码
+2. 可以使用 src 属性引入脚本文件 `<script type="text/javascript" src="https://yzl.xyz/lin/lib/jquery.min.js"></script>`，此时会忽略标签内的 js 代码
+3. 动态插入 script 标签然后引入 js 文件
 
 ### 如何在html中引入样式表文件或写入css代码，有什么区别
 
