update: 如何在html中引入样式表文件或写入css代码，有什么区别 & prefetch 和 preload 是什么 & localStorage 和 sessionStorage 的相同点和不同点是什么 & localStorage 和 sessionStorage 怎么设置过期时间

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -52,19 +52,19 @@ category:
 
 ### HTML5是什么，新增了什么
 
-1. HTML5是 HTML 的最新稳定版本，HTML5 将 HTML 从用于构造一个文档的一个简单标记，到一个完整的应用程序开发平台
+1. HTML5是 HTML 的最新稳定版本（W3C在2014年10月完成标准制定，取代了1999年的HTML4.01），HTML5 将 HTML 从用于构造一个文档的一个简单标记，到一个完整的应用程序开发平台
 2. 新增了语义化标签
 3. 增强型表单，`input` 标签增加了不同类型，增加了几个表单元素，增加了几个表单属性
 4. 支持音视频 `audio` 和 `video`
 5. 新增绘图标签 `canvas` 和对应API
-6. 增加了 `SVG` 的支持
+6. 增加了内联 `SVG` 的支持
 7. 增加了地理位置相关的API：`window.navigator.geolocation.getCurrentPosition`
 8. 增加了 `drag`、`drop` 拖放事件
 9. 增加了 `WebWorker`
-10. 增加了 `localStorage` 和 `sessionStorage`
+10. 增加了 `localStorage`、`sessionStorage` 和 web SQL
 11. 增加了 `WebSocket`
 
-注：[juejin-CSS3和HTML5新特性一览](https://juejin.cn/post/6844903829679390728)、[MDN-HTML5](https://developer.mozilla.org/zh-CN/docs/Glossary/HTML5)
+注：[juejin-CSS3和HTML5新特性一览](https://juejin.cn/post/6844903829679390728)、[MDN-HTML5](https://developer.mozilla.org/zh-CN/docs/Glossary/HTML5)、[niukewang-HTML5](https://www.nowcoder.com/tutorial/10007/e687b047ab474c2795f4a0369434ef09)
 
 ### DOCTYPE是什么
 
@@ -110,14 +110,49 @@ category:
 
 1. 可以直接在 script 标签中写 js 代码
 2. 可以使用 src 属性引入脚本文件 `<script type="text/javascript" src="https://yzl.xyz/lin/lib/jquery.min.js"></script>`，此时会忽略标签内的 js 代码
-3. 动态插入 script 标签然后引入 js 文件
+3. 动态创建&插入 script 标签然后引入 js 文件
+
+### script 标签的 async 属性和 defer 属性有什么作用
+
+1. 不设置这两个属性时，遇到 script 就会下载、解析和执行，会阻塞解析 HTML，在 js 执行完毕后，恢复解析 HTML，因此在没有这两个属性的情况下我们可以把 script 标签放到 body 标签的最后避免这种情况
+2. async 和 defer 都是 html5 中新增的规范，用于优化 script 的下载
+3. **async**：这个 async 代表网络的异步，即**一边下载脚本文件，一边继续解析 HTML，当下载完成时，才暂停解析 HTML**（如果没有解析完），执行脚本，执行完毕后，恢复 HTML 的解析。async 脚本的执行顺序不确定。
+4. **defer**：和 async 一样**异步下载脚本文件，下载完成后也不会执行，直到 HTML 解析完成，才会执行**
+
+注：[juejin-图解script标签中的async和defer属性](https://juejin.cn/post/6894629999215640583)
 
 ### 如何在html中引入样式表文件或写入css代码，有什么区别
+
+1. 直接在 style 标签中写入 css 代码
+2. 使用 link 标签引入：`<link rel="stylesheet" type="text/css" href="mystyle.css">`
+3. 内联样式，在需要设置样式的元素上增加 style 属性，并在其中写入 css 代码
+4. 使用 `@import`：`@import url("bluish.css") projection, tv;` 或 `@import 'bluish.css'`，`@import` 需要一个样式表文件路径，以及可选的媒体查询列表
+5. 内联样式权重最高，其次是 style 标签中和 link 中引入的，最低的是通过 `@import` 引入的
+
+注：[cainiao-CSSimport规则](https://www.runoob.com/cssref/pr-import-rule.html)
+
+### prefetch 和 preload 是什么
+
+1. 如何使用：`<link rel="prefetch" href="static/xxx.png">`，preload 同理，但需要通过 as 属性指定资源类型，如 `font/style/script`，它们都是用来辅助浏览器进行资源优化
+2. **prefetch（链接预取） 作用：在空闲时下载用户将来可能访问的资源，之后便可从缓存中取用**；场景：预先加载一些下个页面需要的图片，用户进入页面后能立即看到这些图片
+3. **preload（预加载）作用：提高资源加载优先级，使资源能更早的加载并得到使用**；场景：字体图标资源优先级太低，导致用户先看到的是占位字符，通过配置 preload，让字体资源优先加载
+
+注：[juejin-使用Preload&Prefetch优化前端页面的资源加载](https://juejin.cn/post/6893681741240909832)
 
 ### 什么是被替换元素，有哪些
 
 1. 被替换元素（Replaced Element）是其表示超出 CSS 范围的元素
 2. 举例：`iframe、video、img、embed、input[type="image"]`、部分情况下的：`option、audio、canvas、object、applet`
+
+### localStorage 和 sessionStorage 的相同点和不同点是什么
+
+1. localStorage 在页面和浏览器窗口被关闭后仍能存在
+2. sessionStorage 在页面被关闭后就被销毁了
+3. 存储大小都为5M，都只能保存字符串，都存在客户端，api一致
+
+### localStorage 和 sessionStorage 怎么设置过期时间
+
+1. 可以在保持数据时，将保存数据时的时间或者过期的时间一并保存下来，取用时，进行判断
 
 ## CSS
 
