--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -35,6 +35,7 @@ category:
 
 注：[MDN-行内元素](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Inline_elements)、[MDN-块级元素](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Block-level_elements)
 注：行内元素在代码里的空格会导致在页面中出现边距
+<!-- more -->
 
 ### 什么是语义化
 
@@ -154,7 +155,7 @@ category:
 
 1. 可以在保持数据时，将保存数据时的时间或者过期的时间一并保存下来，取用时，进行判断
 
-<iframe src="www.baidu.com" ></iframe>
+<iframe src="https://www.baidu.com" ></iframe>
 
 ## CSS
 
