update: 什么是 CSS & 常见布局

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -155,9 +155,15 @@ category:
 
 1. 可以在保持数据时，将保存数据时的时间或者过期的时间一并保存下来，取用时，进行判断
 
-<iframe src="https://www.baidu.com" ></iframe>
-
 ## CSS
+
+### 什么是 CSS
+
+1. 全名层叠样式表（`Cascading [kæs'keɪdɪŋ] Style Sheets`），用于描述 XML 分支语言（如：HTML、MathML、XML、XHTML、SVG）文档的呈现
+2. CSS 描述了在各种显示介质上（如屏幕），元素应该被如何渲染的问题
+3. CSS 由 W3C 规范 实现跨浏览器的标准化。CSS1 现已废弃， CSS2.1 是推荐标准，CSS3 正在标准化中。
+
+注：[MDN-CSS](https://developer.mozilla.org/zh-CN/docs/Web/CSS)
 
 ### 列举常见的选择器
 
@@ -166,6 +172,139 @@ category:
 ### 什么是伪元素和伪类
 
 ### 常见布局
+
+1. 圣杯布局，是一种三栏布局方案
+
+浏览器渲染引擎构建DOM树和渲染是异步的，谁先构建好谁就可以先渲染，传统的三栏布局left早于main构建好
+
+利用css技巧，让main能写在left前面
+
+缺点：当main宽度过小时（小于left），样式就会乱掉
+
+```html
+<html>
+  <head>
+    <style>
+      header,
+      footer {
+          height: 50px;
+          background: pink;
+      }
+      .wrapper {
+          padding: 0 100px 0 100px;
+          overflow: hidden;
+      }
+      .col {
+          position: relative;
+          float: left;
+      }
+      .main {
+          width: 100%;
+          height: 200px;
+      }
+      .left {
+          width: 100px;
+          height: 200px;
+          margin-left: -100%;
+          left: -100px;
+          background: skyblue;
+      }
+      .right {
+          width: 100px;
+          height: 200px;
+          margin-left: -100px;
+          right: -100px;
+          background: skyblue;
+      }
+    </style>
+  </head>
+  <body>
+    <header>header</header>
+    <section class="wrapper">
+        <section class="col main">main</section>
+        <aside class="col left">left</aside>
+        <aside class="col right">right</aside>
+    </section>
+    <footer>footer</footer>
+  </body>
+</html>
+```
+
+[预览-code.juejin.cn](https://code.juejin.cn/pen/7136844958098522148)
+
+<iframe src="https://code.juejin.cn/pen/7136844958098522148" style="width: 100%;height: 500px;"></iframe>
+
+2. 双飞翼布局，圣杯布局的优化
+
+通过增加一个DOM层级，解决relative导致的样式错乱
+
+```html
+<html>
+  <head>
+    <style>
+      header, footer {
+        height: 50px;
+        background-color: pink;
+      }
+
+      .wrapper {
+          padding: 0;
+          overflow: hidden;
+      }
+
+      .col {
+          float: left;
+      }
+
+      .main {
+          width: 100%;
+      }
+
+      .main:hover {
+          background: red;
+      }
+
+      .main-wrap {
+          margin: 0 100px 0 100px;
+          height: 200px;
+      }
+
+      .left {
+          width: 100px;
+          height: 200px;
+          margin-left: -100%;
+          background-color: skyblue;
+          opacity: 0.5;
+      }
+
+      .right {
+          width: 100px;
+          height: 200px;
+          margin-left: -100px;
+          background-color: skyblue;
+          opacity: 0.5;
+      }
+    </style>
+  </head>
+  <body>
+    <header>header</header>
+    <section class="wrapper">
+        <section class="col main">
+            <section class="main-wrap">main</section>
+        </section>
+        <aside class="col left">left</aside>
+        <aside class="col right">right</aside>
+    </section>
+    <footer>footer</footer>
+  </body>
+</html>
+```
+
+[预览-code.juejin.cn](https://code.juejin.cn/pen/7136849848728289317)
+
+<iframe src="https://code.juejin.cn/pen/7136849848728289317" style="width: 100%;height: 500px;"></iframe>
+
+注：[juejin-聊聊为什么淘宝要提出「双飞翼」布局](https://juejin.cn/post/6844903510933258247)
 
 ### position 有哪几种值，分别有什么作用
 
