update: 列举常见的选择器

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -12,7 +12,6 @@ category:
 
 ### HTML是什么
 
-[MDN解答-HTML（超文本标记语言）](https://developer.mozilla.org/zh-CN/docs/Web/HTML)
 
 1. HTML 是 `HyperText [ˈhʌɪpətɛkst] Markup Language` 的缩写，即超文本标记语言，比起将他归类为编程语言，他更适合被作为一个标记语言来看待
 2. 它定义了网页内容的含义和结构（CSS样式、JS行为）
@@ -20,6 +19,7 @@ category:
 4. 标记：可以理解为 HTML 语言中的标签，表示不同的含义，比如文字或图片，浏览器能依据这些标记进行文档（网页）的显示
 
 注：Markdown是一种轻量级标记语言
+注：[MDN-HTML（超文本标记语言）](https://developer.mozilla.org/zh-CN/docs/Web/HTML)
 
 ### 行内元素和块级元素是什么，分别有哪些，有哪些区别
 
@@ -49,7 +49,7 @@ category:
 1. 搜索引擎优化，简称：SEO（Search Engine Optimization）。基本原理是“搜索引擎蜘蛛”或“网络爬虫”在互联网中收集并分析得到有用的信息，然后根据关键词存储到数据库中。让自己网站能够被搜索引擎识别，并提高自己网站的权重的过程就叫SEO
 2. 优化手段：定义网站的标题、关键字、描述；内容与关键字的对应，增加关键字的密度；设置robots.txt；设置网站地图；网站布局（结构）优化，HTML语义化；增加首页有效链接；减少子路径的网页触达路径；服务端渲染等
 
-注：[robots.txt说明](https://www.robotstxt.org/robotstxt.html)、[juejin-前端SEO优化](https://juejin.cn/post/6844903824428105735#comment)
+注：[robots.txt说明](https://www.robotstxt.org/robotstxt.html)、[掘金-前端SEO优化](https://juejin.cn/post/6844903824428105735#comment)
 
 ### HTML5是什么，新增了什么
 
@@ -65,7 +65,7 @@ category:
 10. 增加了 `localStorage`、`sessionStorage` 和 web SQL
 11. 增加了 `WebSocket`
 
-注：[juejin-CSS3和HTML5新特性一览](https://juejin.cn/post/6844903829679390728)、[MDN-HTML5](https://developer.mozilla.org/zh-CN/docs/Glossary/HTML5)、[niukewang-HTML5](https://www.nowcoder.com/tutorial/10007/e687b047ab474c2795f4a0369434ef09)
+注：[掘金-CSS3和HTML5新特性一览](https://juejin.cn/post/6844903829679390728)、[MDN-HTML5](https://developer.mozilla.org/zh-CN/docs/Glossary/HTML5)、[牛客网-HTML5](https://www.nowcoder.com/tutorial/10007/e687b047ab474c2795f4a0369434ef09)
 
 ### DOCTYPE是什么
 
@@ -85,7 +85,7 @@ category:
 <!-- HTML5规范的标准模式 -->
 <!DOCTYPE html>
 ```
-注：[zhihu-doctype的作用](https://zhuanlan.zhihu.com/p/32609899)
+注：[知乎-doctype的作用](https://zhuanlan.zhihu.com/p/32609899)
 
 ### meta标签有什么作用
 
@@ -120,7 +120,7 @@ category:
 3. **async**：这个 async 代表网络的异步，即**一边下载脚本文件，一边继续解析 HTML，当下载完成时，才暂停解析 HTML**（如果没有解析完），执行脚本，执行完毕后，恢复 HTML 的解析。async 脚本的执行顺序不确定。
 4. **defer**：和 async 一样**异步下载脚本文件，下载完成后也不会执行，直到 HTML 解析完成，才会执行**
 
-注：[juejin-图解script标签中的async和defer属性](https://juejin.cn/post/6894629999215640583)
+注：[掘金-图解script标签中的async和defer属性](https://juejin.cn/post/6894629999215640583)
 
 ### 如何在html中引入样式表文件或写入css代码，有什么区别
 
@@ -130,7 +130,7 @@ category:
 4. 使用 `@import`：`@import url("bluish.css") projection, tv;` 或 `@import 'bluish.css'`，`@import` 需要一个样式表文件路径，以及可选的媒体查询列表
 5. 内联样式权重最高，其次是 style 标签中和 link 中引入的，最低的是通过 `@import` 引入的
 
-注：[cainiao-CSSimport规则](https://www.runoob.com/cssref/pr-import-rule.html)
+注：[菜鸟教程-CSSimport规则](https://www.runoob.com/cssref/pr-import-rule.html)
 
 ### prefetch 和 preload 是什么
 
@@ -138,7 +138,7 @@ category:
 2. **prefetch（链接预取） 作用：在空闲时下载用户将来可能访问的资源，之后便可从缓存中取用**；场景：预先加载一些下个页面需要的图片，用户进入页面后能立即看到这些图片
 3. **preload（预加载）作用：提高资源加载优先级，使资源能更早的加载并得到使用**；场景：字体图标资源优先级太低，导致用户先看到的是占位字符，通过配置 preload，让字体资源优先加载
 
-注：[juejin-使用Preload&Prefetch优化前端页面的资源加载](https://juejin.cn/post/6893681741240909832)
+注：[掘金-使用Preload&Prefetch优化前端页面的资源加载](https://juejin.cn/post/6893681741240909832)
 
 ### 什么是被替换元素，有哪些
 
@@ -166,6 +166,12 @@ category:
 注：[MDN-CSS](https://developer.mozilla.org/zh-CN/docs/Web/CSS)
 
 ### 列举常见的选择器
+
+1. CSS1中出现的：基础的，**类选择器**`.header`、**id选择器**`#root`、**元素选择器**`div`；复合的，**逗号选择器**`selector, selector`、**子孙选择器**`selector selector`；伪类伪元素，`:link`、`:visited`、`:active`、`:hover`、`:first-letter`、`:first-line`
+2. CSS2中出现的：基础的，**通配符选择器**`*`、**属性选择器**`[style]` `[style=color: red;]` `[style~=red]` `[style|=color]`；复合的，**兄弟选择器**`selector + selector`；伪类伪元素：`:after`、`:before`、`:lang(en)`、`:first-child`
+3. CSS3中出现的：基础的，**属性选择器**`[style^=color]` `[style$=red]` `[style*=color]`；复合的，**兄弟们选择器**`selector ~ selector`；伪类伪元素，`:first-of-type`、`:last-of-type`、`:nth-of-type(n)`、`:not(selector)` `:in-range` `:required`等
+
+注：[菜鸟教程-CSS选择器](https://www.runoob.com/cssref/css-selectors.html)
 
 ### 选择器权重
 
