update: position 有哪几种值，分别有什么作用

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -314,6 +314,14 @@ category:
 
 ### position 有哪几种值，分别有什么作用
 
+1. `static`：不进行定位，`top left right bottom z-index` 无效
+2. `relative`：相对定位，不改变页面布局，基于自己不定位时的位置进行定位（对几个table相关的元素无效）
+3. `absolute`： 绝对定位，脱离文档流，基于最近一个有定位的祖先元素进行定位
+4. `fixed`：固定定位，脱离文档流，创建一个新的层叠上下文，当元素祖先没有 transform、perspective 和 filter 时，相对于视口定位，否则相对于这个祖先定位
+5. `sticky`：粘性定位，不改变页面布局，基于最近滚动祖先定位，创建一个新的层叠上下文
+
+注：[MDN-position](https://developer.mozilla.org/zh-CN/docs/Web/CSS/position)
+
 ### 如何清除浮动
 
 ### 什么是盒模型
@@ -349,3 +357,6 @@ category:
 ## node
 
 ## 其他
+
+### 前端性能监控怎么做
+
