update: 哪些情况会造成外边距折叠

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -328,6 +328,22 @@ category:
 
 ### 什么是 BFC
 
+1. Block Formatting Context 块级格式化上下文，块级盒子的布局过程发生的区域
+2. 哪些情况会产生块级格式化上下文举例：html元素、float、inline-block、单元格、inline-flex/flex及其直接子元素、inline-grid/grid及其直接子元素等
+3. 作用：包含内部浮动、排除外部浮动、阻止外边距重叠
+
+注：[MDN-BFC](https://developer.mozilla.org/zh-CN/docs/Web/Guide/CSS/Block_formatting_context)
+
+### 哪些情况会造成外边距折叠，如何解决
+
+1. **同一层相邻元素之间**；解决：后一个元素加上 clear-fix 解决
+2. **没有内容将父元素和子元素分开**，重叠部分最终会溢出到父级块元素外面；解决：将父元素边界与子元素分开，比如增加边框，内边距，加一行内容隔开，创建BFC，清除浮动，
+3. **空的块级元素**，元素上外边距直接贴到下外边距；解决：让元素不为空即可，增加边框，内边距，加内容等
+
+注：[MDN-外边距重叠](https://developer.mozilla.org/zh-CN/docs/Web/CSS/CSS_Box_Model/Mastering_margin_collapsing)
+
+### 什么是层叠上下文
+
 ### flex 布局是什么，有什么特点
 
 ### grid 布局是什么，有什么特点
