update: 前端性能监控怎么做

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -376,3 +376,29 @@ category:
 
 ### 前端性能监控怎么做
 
+#### 为什么要性能监控
+
+1. 性能差影响用户体验，减少用户访问量，留存率
+2. 不监控不能知道性能的情况，无法进行分析，以做特定的优化，优化了以后仅通过肉眼查看也不知道优化到什么程度
+
+#### 确认要监控的指标
+
+1. 白屏时间：从浏览器输入地址并回车后到页面开始有内容的时间
+2. 首屏时间：从浏览器输入地址并回车后到首屏内容渲染完毕的时间
+3. 用户可操作时间节点：DOM Ready 触发节点，点击事件有反应
+4. 总下载时间：window.onload 的触发节点。
+
+#### 如何进行性能监控
+
+1. 可利用 performance API 中的 performance.timing 进行各阶段加载时间的统计，其中的属性含义对应页面的渲染流程如第2点所示
+2. (startTime)`开始` -> 
+(unloadEventStart)`页面卸载`(unloadEventEnd) -> 
+(redirectStart)`重定向到此页面`(redirectEnd) -> 
+(fetchStart)`AppCache查找缓存` -> 
+(domainLookupStart)`DNS解析`(domainLookupEnd) -> 
+(connectStart)(secureConnectionStart)`TCP`(connectEnd) -> 
+(requestStart)`Request`(responseStart)`Response` -> 
+(domInteractive)(domContentLoadedEventStart)`Processing`(domContentLoadedEventEnd)(domComplete) -> 
+(loadEventStart)`Load`(loadEventEnd)
+3. 使用 performance 也会一定程度的影响，可以基于 requestIdleCallback，在闲时进行记录
+4. 数据上报，优先使用 `navigator.sendBeacon` 进行上报，优点：异步执行，不影响页面加载、浏览器关闭也能发送；其次使用 img 标签 src 属性发送，标签兼容性很高，不会跨域。
