--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -362,6 +362,13 @@ category:
 
 ## Vue
 
+### 什么是 Vue
+
+1. 构建用户界面的渐进式框架（可以只使用部分功能，可以后续逐步增加功能）
+2. 不完全遵循MVVM（软件架构模式 model–view–viewmodel），其存在 ref，能直接操作 DOM
+
+注：[Vue2官网-Vue.js是什么](https://v2.cn.vuejs.org/v2/guide/#Vue-js-%E6%98%AF%E4%BB%80%E4%B9%88)
+
 ## TS
 
 ## 小程序
@@ -402,3 +409,5 @@ category:
 (loadEventStart)`Load`(loadEventEnd)
 3. 使用 performance 也会一定程度的影响，可以基于 requestIdleCallback，在闲时进行记录
 4. 数据上报，优先使用 `navigator.sendBeacon` 进行上报，优点：异步执行，不影响页面加载、浏览器关闭也能发送；其次使用 img 标签 src 属性发送，标签兼容性很高，不会跨域。
+
+### 前端异常监控怎么做
