update：.vue文件/单文件组件/SFC是什么/Vue2的响应式/数据驱动视图原理是什么/Vue2 和 Vue3 有什么区别

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -369,6 +369,36 @@ category:
 
 注：[Vue2官网-Vue.js是什么](https://v2.cn.vuejs.org/v2/guide/#Vue-js-%E6%98%AF%E4%BB%80%E4%B9%88)
 
+### Vue2 和 Vue3 有什么区别
+
+1. 源码采用 monorepo 方式进行管理，将模块拆分到 package 目录中
+2. Vue3 采用ts开发,增强类型检测。 Vue2 则采用flow
+3. Vue3 的性能优化，去掉了不常用的 api，支持 tree-shaking, 不使用就不会被打包
+4. Vue3 劫持数据采用 proxy，Vue2 劫持数据采用defineProperty，defineProperty有性能问题和缺陷
+5. Vue3 中对模板编译进行了优化，编译时 生成了 Block tree，可以对子节点的动态节点进行收集，可以减少比较，并且采用了 patchFlag 标记动态节点
+6. Vue3 采用 compositionApi （组合式）进行组织功能，解决反复横跳，优化复用逻辑 （mixin 带来的数据来源不清晰、命名冲突等）, 相比 optionsApi （声明式）类型推断更加方便
+7. 增加了 Fragment、Teleport、Suspense 组件
+
+### Vue2的响应式/数据驱动视图原理是什么
+
+1. Vue 通过 Object.defineProperty 递归处理状态，能在其 getter 和 setter 中监听到属性访问和属性修改
+2. 对于数组，Vue 会修改其“数组变异方法” `const arrayProto = Array.prototype, arrayMethods = Object.create(arrayProto)`、`arr.__proto__ = arrayMethods`，达到用户通过push、pop等数组方法修改数组项时，也能进行响应
+3. 页面渲染后，触发了对象属性的 getter，Vue 会在其中进行依赖收集（收集观察者Watcher），当 setter 时，通知每个 Watcher 进行更新视图的操作
+4. Vue 内部会过滤重复的更新，并在下一次事件循环的 nextTick 中进行更新
+
+注：[掘金-跟我一起读源码丨Vue源码之依赖收集](https://juejin.cn/post/6906304632406933512)、[掘金-Vue2.0侦听器模拟实现](https://juejin.cn/post/6985188012569133070)
+
+### .vue文件/单文件组件/SFC是什么
+
+1. 通常我们写业务都会使用.vue文件，但是Vue是渐进式js框架，可以单纯使用js进行编写
+2. 【单纯使用js进行编写】这种方式可能会导致我们出现如下情况：*全局定义*、*字符串模板*、*组件化中不支持 CSS*、*没有构建步骤，为了兼容性不能使用高级语法*，
+3. .vue文件这种单文件组件就是为了解决上述情况的，好处是*编辑器支持，语法高亮*、*组件作用域scoped的样式*、*模块化的js，如CommonJS或ES Module*，它通过
+4. 单文件组件可以通过 webpack -> vue-loader 解析，并继续通过对应的 loader 解析成为最终产物
+
+注：[Vue-单文件组件](https://v2.cn.vuejs.org/v2/guide/single-file-components.html)
+
+### vue-loader 做了什么？
+
 ## TS
 
 ## 小程序
