fix：Vue2的响应式/数据驱动视图原理是什么

--- a/source/_posts/2022_08_2022前端八股文.md
+++ b/source/_posts/2022_08_2022前端八股文.md
@@ -384,7 +384,7 @@ category:
 1. Vue 通过 Object.defineProperty 递归处理状态，能在其 getter 和 setter 中监听到属性访问和属性修改
 2. 对于数组，Vue 会修改其“数组变异方法” `const arrayProto = Array.prototype, arrayMethods = Object.create(arrayProto)`、`arr.__proto__ = arrayMethods`，达到用户通过push、pop等数组方法修改数组项时，也能进行响应
 3. 页面渲染后，触发了对象属性的 getter，Vue 会在其中进行依赖收集（收集观察者Watcher），当 setter 时，通知每个 Watcher 进行更新视图的操作
-4. Vue 内部会过滤重复的更新，并在下一次事件循环的 nextTick 中进行更新
+4. Vue 内部会过滤重复的更新，并在下一次事件循环的 nextTick 中进行批量更新
 
 注：[掘金-跟我一起读源码丨Vue源码之依赖收集](https://juejin.cn/post/6906304632406933512)、[掘金-Vue2.0侦听器模拟实现](https://juejin.cn/post/6985188012569133070)
 
