--- a/source/_drafts/2022面试题难点标题合集.md
+++ b/source/_drafts/2022面试题难点标题合集.md
@@ -4,6 +4,9 @@ tags:
 ---
 
 1. 对称加密，非对称加密
+非对称 
+- 根据3位数乘91的结果的后三位A，可以推导出原三位数，只要把 A * 11 取最后三位数就行
+- 其中 91 是公钥，11是秘钥，91 乘原三位数是加密算法，A * 11 是解密算法
 2. https ssl
 3. 四层，七层网络模型
 4. 隐式类型转换
